--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ h1 {
 
 <h1>Has SRI been a good steward of the MFLC contract?</h1>
 
+<p>If you are aware of problems with SRI’s administration of the MFLC contract, please email <a href="mailto:sri-mflc@protonmail.com">sri-mflc@protonmail.com</a>. Information collected will be compiled and all personally identifying information will be removed prior to forwarding to the appropriate parties.</p>
+	
 <p><strong>Summary:</strong> SRI has recently been awarded a number of MFLC positions upon MHN’s withdrawal from the MFLC contract. However, SRI’s execution of the MFLC contract represents a significant departure from the industry standard practices adopted by other contractors, in seven primary respects:</p>
 
 <ol>
@@ -89,6 +91,12 @@ h1 {
 <p><strong>Problem:</strong> Instead of addressing the issues identified above and working to correct them, SRI has threatened legal action against MFLC’s who report problems to or through military channels.</p>
 <p><strong>Context:</strong> From a September 23, 2020 e-mail on the subject sent by SRI to its MFLC employees: “As disclosure of SRI proprietary information can have detrimental consequences for the Company, the policy continues with an employee’s failure to keep such information confidential from vendors, clients and other entity [sic], can lead not only to disciplinary action including termination but also to <em>criminal or civil charges</em>” (emphasis added).</p>
 <p><strong>Impact:</strong> Instead of adopting a proactive and/or collaborative approach to problem solving, SRI states it may bring “criminal or civil charges” against its employees. As some issues with SRI involve potential health or safety concerns (as outlined above), if such statements could be construed as attempting to suppress reporting of problems to the government, they may be of questionable legality. In any case, they represent basic failure of business leadership and communication. SRI’s approach is consistent with its decision to file a “pre-award protest” in advance of the pending MFLC contract announcement. SRI should not expect to protest its way into government business any more than it can expect to generate loyalty and goodwill among its employees by threatening to bring criminal or civil charges against them.</p>
+</li>
+
+<li>
+<p><strong>Problem:</strong> During a recent conference call, the owner of SRI spoke at some length about how God had given her the company and/or the MFLC contract.</p>
+<p><strong>Context:</strong> While MFLC’s as a group are supportive of free speech and expression (to include religious viewpoints), doing so in a business setting can create problems.</p>
+<p><strong>Impact:</strong> Invoking or implying divine sanction for one’s business interests can be seen as an attempt to manipulate individuals into aligning with those interests, even when they are at odds with personal interests, such as compensation and benefits. Doing so may also disrespect personal differences and violate professional boundaries.</p>
 </li>
 
 </ol>
