--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ h1 {
 
 <p>If you are aware of problems with SRI’s administration of the MFLC contract, please email <a href="mailto:sri-mflc@protonmail.com">sri-mflc@protonmail.com</a>. Information collected will be compiled and all personally identifying information will be removed prior to forwarding to the appropriate parties.</p>
 	
-<p><strong>Summary:</strong> SRI has recently been awarded a number of MFLC positions upon MHN’s withdrawal from the MFLC contract. However, SRI’s execution of the MFLC contract represents a significant departure from the industry standard practices adopted by other contractors, in seven primary respects:</p>
+<p><strong>Summary:</strong> SRI has recently been awarded a number of MFLC positions upon MHN’s withdrawal from the MFLC contract. However, SRI’s execution of the MFLC contract represents a significant departure from the industry standard practices adopted by other contractors, in eight primary respects:</p>
 
 <ol>
 
