Change to MKPUSA: WTF?

--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
 <meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SRI MFLC contract stewardship</title>
+<title>MKPUSA: WTF?!</title>
 <style>
 html, body {
 	border: 0;
@@ -43,70 +40,62 @@ h1 {
 
 <div id="document">
 
-<h1>Has SRI been a good steward of the MFLC contract?</h1>
+	<h1>What happens when an organization succumbs to bureaucracy?</h1>
 
-<p>If you are aware of problems with SRI’s administration of the MFLC contract, please email <a href="mailto:sri-mflc@protonmail.com">sri-mflc@protonmail.com</a>. Information collected will be compiled and all personally identifying information will be removed prior to forwarding to the appropriate parties.</p>
+	<h1>NOTHING!</h1>
 	
-<p><strong>Summary:</strong> SRI has recently been awarded a number of MFLC positions upon MHN’s withdrawal from the MFLC contract. However, SRI’s execution of the MFLC contract represents a significant departure from the industry standard practices adopted by other contractors, in eight primary respects:</p>
+	<p>Sometimes shadow gets in the way of keeping our agreements. When this happens, we’re here to help by offering support accountability.</p>
 
-<ol>
+	<h2>Selling but not delivering</h2>
 
-<li>
-<p><strong>Problem:</strong> SRI has recently confirmed that in the event of a positive COVID-19 test result, its newest MFLC’s (inherited from MHN) must choose between coming to work sick or staying home without pay. This presents a risk to the military community and works against the mission of military readiness.</p>
-<p><strong>Context:</strong> In 2018 the MFLC contract was revised to bring it into compliance with the Service Contract Act (SCA), which requires federal contractors to provide compensation and fringe benefits found “prevailing in the locality.” Previously the MFLC contract afforded no leave benefits (vacation or sick leave). Other contractors have accorded their MFLC employees sick leave and vacation benefits from the first day of employment; SRI has not.</p>
-<p><strong>Impact:</strong> In light of the current COVID-19 pandemic, SRI’s execution of the MFLC contract represents a critical safety problem, as well as a potential new violation of the Service Contract Act.</p>
-</li>
+	<p><strong>What was the agreement?</strong> In 2015, MKPUSA proposed unification with separate regions in the US. Prior to unification, MKPUSA specifically represented that the change was administrative in nature and would not change “[Intermountain’s] ability to decide when and where we hold NWTAs and other MKP related trainings.”</p>
 
-<li>
-<p><strong>Problem:</strong> Upon being awarded MFLC positions secondary to the withdrawal of MHN from the MFLC contract, SRI reduced compensation, in some cases as much as 25%.</p>
-<p><strong>Context:</strong> Having been awarded additional (and unanticipated) positions under the MFLC contract upon the withdrawal of MHN, SRI significantly lowered salaries and other benefits and exploited its position as the only company for whom these MFLC’s could work, with the following proposition: Accept the newly proposed terms or face unemployment. SRI has refused to negotiate.</p>
-<p><strong>Impact:</strong> Given the significant reduction in total compensation offered, service members and their families could lose services on which they have come to depend if MFLC’s cannot afford to remain employed at SRI’s lower rate. Despite this, SRI has maintained its stance, placing its own interests ahead of service members, their families, and the MFLC program at large. SRI’s compensation policy has resulted in lower morale across the portion of the MFLC contract SRI administers.</p>
-</li>
+	<p><strong>Did MKPUSA keep the agreement?</strong> No. MKPUSA sold one thing (“primarily an administrative change”) and delivered something else entirely.</p>
 
-<li>
-<p><strong>Problem:</strong> SRI has refused to adjust compensation according to experience, offering the seasoned professional the same hourly rate and benefits it offers recent graduates.</p>
-<p><strong>Context:</strong> This may result from SRI being “in over [its] head.” Perhaps if SRI had more resources to devote to contract administration, it would have been able to offer compensation according to professional experience and other factors.</p>
-<p><strong>Impact:</strong> Consistent with SRI’s other choices, some of which are detailed above, SRI’s decision in this regard has the impact of lowering the morale of its employees, especially since greater experience is not rewarded. This represents a departure not only from government contracting expectations, but from industry standard employment and retention practices as well.</p>
-</li>
+	<p><strong>What did MKPUSA make more important?</strong> MKPUSA apparently decided that as a body it is authorized to act (and has acted) as gatekeeper of the NWTA and has accordingly usurped authority that was specifically promised to remain with Intermountain.</p>
 
-<li>
-<p><strong>Problem:</strong> Perhaps because of conditions described in points #2 and #3, a number of SRI MFLC positions have been left unfilled for extended periods of time across multiple locations.</p>
-<p><strong>Context:</strong> SRI’s inability to successfully fill MFLC positions seems directly related to its decision to significantly reduce compensation for its MFLC’s, especially when compared against other MFLC contractors.</p>
-<p><strong>Impact:</strong> At any given installation, MFLC personnel are among the most accessible professionals to whom military members and their family members can turn for help navigating the stressors they face, especially in light of the current pandemic. Leaving positions unfilled means service members may not access help to which they are entitled.</p>
-</li>
+	<p><strong>What has been the impact on MKPUSA?</strong> MKPUSA has lost the trust of many Intermountain men.</p>
 
-<li>
-<p><strong>Problem:</strong> When seeking to fill SRI MFLC positions, recruiters have made promises that SRI has later refused to keep.</p>
-<p><strong>Context:</strong> SRI has at times recruited heavily to fill as many positions as it could (with its lower compensation rates). It seems likely that recruiters were given license to generate interest in these positions by making promises SRI never intended to keep.</p>
-<p><strong>Impact:</strong> A number of professionals have arranged personal and business interests on the basis of employment representations made by SRI, later to find these same representations unilaterally withdrawn by SRI. The consequences to some have been severe.</p>
-</li>
+	<p><strong>What has been the impact on Intermountain?</strong> The men of Intermountain have been placed in the position of requesting permission to hold an NWTA. And notwithstanding a viable consensus to move forward with a vaccinated weekend, MKPUSA has not responded to the request. Thus, the men of Intermountain have not been able to plan their NWTA and increasingly question the ability and relevance of MKPUSA in leading men’s work.</p>
 
-<li>
-<p><strong>Problem:</strong> SRI has not ported phone numbers from MHN despite MHN’s representation that it would make its phone numbers available to port.</p>
-<p><strong>Context:</strong> This may result from SRI simply not having or investing in the staff or support personnel necessary to port numbers from a previous contractor.</p>
-<p><strong>Impact:</strong> MFLC phone numbers are the means by which MFLC services are accessed across military installations; they are published base-wide and pamphlets and over literature are printed with these numbers. Failing to port them might represent a convenience to the incoming contractor, but that convenience is at considerable expense to the installations served, making it more difficult for military members and their families to access MFLC services.</p>
-</li>
+	<h2>Abdicating instead of advancing</h2>
 
-<li>
-<p><strong>Problem:</strong> Instead of addressing the issues identified above and working to correct them, SRI has threatened legal action against MFLC’s who report problems to or through military channels.</p>
-<p><strong>Context:</strong> From a September 23, 2020 e-mail on the subject sent by SRI to its MFLC employees: “As disclosure of SRI proprietary information can have detrimental consequences for the Company, the policy continues with an employee’s failure to keep such information confidential from vendors, clients and other entity [sic], can lead not only to disciplinary action including termination but also to <em>criminal or civil charges</em>” (emphasis added).</p>
-<p><strong>Impact:</strong> Instead of adopting a proactive and/or collaborative approach to problem solving, SRI states it may bring “criminal or civil charges” against its employees. As some issues with SRI involve potential health or safety concerns (as outlined above), if such statements could be construed as attempting to suppress reporting of problems to the government, they may be of questionable legality. In any case, they represent basic failure of business leadership and communication. SRI’s approach is consistent with its decision to file a “pre-award protest” in advance of the pending MFLC contract announcement. SRI should not expect to protest its way into government business any more than it can expect to generate loyalty and goodwill among its employees by threatening to bring criminal or civil charges against them.</p>
-</li>
+	<p><strong>What was the agreement?</strong> MKPUSA has an implicit agreement with its stakeholders to advance men’s work (or at the very least, to not prevent it).</p>
 
-<li>
-<p><strong>Problem:</strong> During a recent conference call, the owner of SRI spoke at some length about how God had given her the company and/or the MFLC contract.</p>
-<p><strong>Context:</strong> While MFLC’s as a group are supportive of free speech and expression (to include religious viewpoints), doing so in a business setting can create problems.</p>
-<p><strong>Impact:</strong> Invoking or implying divine sanction for one’s business interests can be seen as an attempt to manipulate individuals into aligning with those interests, even when they are at odds with personal interests, such as compensation and benefits. Doing so may also disrespect personal differences and violate professional boundaries.</p>
-</li>
+	<p><strong>Did MKPUSA keep the agreement?</strong> No. Although men’s work can safely continue according to Intermountain health professionals and CDC guidelines, MKPUSA has chosen to wrest local control of the NWTA in direct contradiction of promises made during the process of unification.</p>
 
-</ol>
+	<p><strong>What has been the impact on MKPUSA?</strong> Under current leadership, MKPUSA is fading in importance, effectiveness, and relevance.</p>
 
-<p>This effort to convey sentiments shared by many SRI employees is our proactive way of responding to the impacts of how SRI has managed the MFLC contract. Many of us have worked for years to create excellence for the military families who serve our country, and we wish SRI could understand that securing government business should mean more than vying to be the lowest cost provider. An MFLC contractor should exhibit responsible stewardship of government funds, and for the reasons listed above (and others), SRI’s stewardship of the MFLC contract has been far less than ideal.</p>
+	<p><strong>What has been the impact on men?</strong> Without the hope embodied by men’s work, men are left to their addictions, their shadows, and themselves. In some cases men are left without hope, and some lose their lives.</p>
 
-<p><strong>Update:</strong> During a recent conference call, key SRI personnel explained that its “pre-award protest” would result in a delay of the new contract announcement, which would in turn extend the length of the contract under which SRI is now operating. Whether or not this was SRI’s intent, and for all the reasons documented above, we hope the government will carefully weigh these expressed concerns and stem program attrition by awarding the next contract without further delay.</p>
+	<h2>Preaching but not practicing</h2>
+
+	<p><strong>What was the agreement?</strong> In August 2015, MKPUSA formally adopted Holacracy as its operating structure and governing paradigm.</p>
+
+	<p><strong>Did MKPUSA keep the agreement?</strong> No. According to its website, Holacracy “is a management practice for the modern era. It embraces our individual humanity, autonomy, and creative problem-solving capacities.” MKPUSA’s actions in wresting local control of the NWTA are in direct contradiction of Holacracy’s embrace of autonomy and creative problem-solving.</p>
+
+	<p><strong>Core Holacracy value: Clarity:</strong> “Holacracy practice enables clear expectations and creates transparent authority at every level. Hidden power dynamics get surfaced and resolved. Everyone is bound by the same rules.”</p>
+
+	<p><strong>Did MKPUSA keep this agreement?</strong> No. Governance of MKPUSA and the role of the North American Leader Body (NALB) have both changed without significant communication to the regions now comprising MKPUSA, much less solicitation of input from the same.</p>
+
+	<p><strong>What has been the impact on MKPUSA?</strong> The opacity of MKPUSA has made this difficult to determine from a distance.</p>
+
+	<p><strong>What has been the impact on the larger MKP community?</strong> Men are left without data and transparency, and MKPUSA is left without visible accountability to its constituent stakeholders. “That which we cannot see” is the simplest definition of “shadow.”</p>
+
+	<h2>What do we want?</h2>
+
+	<p>We call on MKPUSA to immediately return control of the NWTA to the local regions from which it was wrongly usurped. The representations made in documents circulated around the time of unification are illustrative of intent and binding on the process.</p>
+
+	<p>We call on MKPUSA to govern itself according to the principles espoused by Holacracy: to be transparent with organizational changes, to seek active input and representation from constituent stakeholders, and to act with the same integrity and accountability taught in our program offerings.</p>
+
+	<p>In the absence of immediate improvement, all options are on the table:</p>
+
+	<ul>
+		<li>Separating from MKPUSA, merging with other regions, and seeking intellectual property from Project founders.</li>
+		<li>Arbitration through a third party.</li>
+		<li>Litigation.</li>
+	</ul>
 
 </div>
-
 </body>
-
 </html>
