Update pdf link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ input[type="checkbox"], input[type="radio"] {
 
         <p><strong>What has been the impact on MKPUSA?</strong> MKPUSA has lost the trust of many Intermountain men.</p>
 
-        <p><strong>What has been the impact on Intermountain?</strong> The men of Intermountain have been placed in the position of requesting permission to hold an NWTA. They have done their homework. By a 93% majority, they have <a href="/proposal-combined-pdf">proposed</a>
+        <p><strong>What has been the impact on Intermountain?</strong> The men of Intermountain have been placed in the position of requesting permission to hold an NWTA. They have done their homework. By a 93% majority, they have <a href="/mkp-proposals.pdf">proposed</a>
  to move forward with a vaccinated weekend. MKPUSA has acknowledged but has not responded to their request. Thus, the men of Intermountain have not been able to plan their NWTA and increasingly question the ability and relevance of MKPUSA in leading men’s work.</p>
 
         <p>To read more about how unification was represented, click <a href="/unification-overview.pdf">here</a></p>
