Style signatures better

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       margin: 0;
       padding: 0.5rem 1rem;
       font-size: 0.95em;
+    }
 
-      p:last-child {
-        margin: 0;
-      }
+    blockquote p:last-child {
+      margin: 0;
     }
 
     #document {
@@ -63,6 +63,11 @@
       margin: 0;
       padding: 2em 8%;
       background: white;
+    }
+
+    .container {
+      margin: 0 auto;
+      width: fit-content;
     }
 
     .center {
@@ -458,10 +463,10 @@
           representations made prior to and during unification.
         </li>
       </ul>
-      
-      <h2>Signatures</h2>
 
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdMZfvtpjeESslV-Pz7WVAhorteS9Ie4_3TlXvImrVVU7DRcQ/viewform?embedded=true" width="640" height="812" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      <div class="container">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdMZfvtpjeESslV-Pz7WVAhorteS9Ie4_3TlXvImrVVU7DRcQ/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
     </div>
   </div>
 </body>
