Fix bare html showing

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 
       <p>Men are waiting.</p>
 
-      <div id="signatures">class="container">
+      <div id="signatures" class="container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdMZfvtpjeESslV-Pz7WVAhorteS9Ie4_3TlXvImrVVU7DRcQ/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
