--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         men who wish to be vaccinated have been; others understand the risks
         of gathering. For all of the following reasons (see below), it is now
         time for MKPUSA to facilitate men's work by honoring its stated
-        agreement, returning the NWTA to local control and allowing men and
+        agreement, returning the NWTA to local control, and allowing men and
         constituent areas to take responsibility for themselves.
       </p>
 
@@ -206,7 +206,7 @@
         to MKP Intermountain was clear and unambiguous. Unification was
         represented primarily as an administrative streamlining. Upon
         unification, decision making for the NWTA was to remain with each
-        local area. From the “Unification Overview” document circulated <em>prior</em>
+        local area. From the “<a href="unification-overview.pdf">Unification Overview</a>” document circulated <em>prior</em>
         to the vote to unify:
       </p>
       <blockquote>
@@ -410,6 +410,8 @@
 
       <p>Men are waiting.</p>
 
+      <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+
       <div id="signatures" class="container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdMZfvtpjeESslV-Pz7WVAhorteS9Ie4_3TlXvImrVVU7DRcQ/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
@@ -433,7 +435,7 @@
           governance. In the lead up to 2015, MKPUSA proposed unification
           under a centralized corporate structure to streamline administrative
           functions, promising that events would remain under local control.
-          See Unification Overview.
+          See <a href="unification-overview.pdf">Unification Overview</a>.
         </li>
         <li id="f3">
           <a href="#f3-inline"><sup>3</sup></a> With regard to “other events,”
