--- a/index.html
+++ b/index.html
@@ -412,13 +412,15 @@
 
       <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
+      <em>Signatures are meant to convey general support and do not imply 100% agreement with every point listed herein.</em>
+
       <div id="signatures" class="container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdMZfvtpjeESslV-Pz7WVAhorteS9Ie4_3TlXvImrVVU7DRcQ/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
       <hr />
 
-      <h2>Citations</h2>
+      <h2>Notes</h2>
 
       <ul class="plain">
         <li id="f1">
