Update iframe styling

--- a/index.html
+++ b/index.html
@@ -410,7 +410,9 @@
 
       <p>Men are waiting.</p>
 
-      <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+      <div id="signatures" class="container">
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
 
       <em>Signatures are meant to convey general support and do not imply 100% agreement with every point listed herein.</em>
 
