--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
       background: white;
     }
 
+    iframe {
+      border: 1px solid black;
+    }
+
     .container {
       margin: 0 auto;
       width: fit-content;
@@ -407,7 +411,7 @@
       <p>Men are waiting.</p>
 
       <div id="signatures" class="container">
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false" width="640" height="400" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
       <em>Signatures are meant to convey general support and do not imply 100% agreement with every point listed herein.</em>
