--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       background: white;
     }
 
-    iframe {
+    .responses {
       border: 1px solid black;
     }
 
@@ -410,7 +410,7 @@
 
       <p>Men are waiting.</p>
 
-      <div id="signatures" class="container">
+      <div id="signatures" class="container responses">
         <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false" width="640" height="400" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
