Add contributions, center signature blurb

--- a/index.html
+++ b/index.html
@@ -414,11 +414,14 @@
         <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false" width="640" height="400" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
-      <em>Signatures are meant to convey general support and do not imply 100% agreement with every point listed herein.</em>
+      <p class="center"><em>Signatures are meant to convey general support and do not imply 100% agreement with every point listed herein.</em></p>
 
       <div id="signatures" class="container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdMZfvtpjeESslV-Pz7WVAhorteS9Ie4_3TlXvImrVVU7DRcQ/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
+
+      <p>Contributions needed and welcome! Donations will increase visibility of this effort by funding a Google Adwords campaign to list this site at or near the top of a Google search for the ManKind Project or MKPUSA. Funds remaining after conclusion of this effort will be held in reserve for the NWTA general scholarship fund.</p>
+      <img src="rhpeterson-venmo.png">
 
       <hr />
 
